Revision history for {{$dist->name}}

{{$NEXT}}
    - many improvements to tests and their coverage

1.35      2014-08-16 00:51:05Z
    - clarify deprecation status in documentation

1.34      2014-05-28 21:31:20Z
    - remove test dependency on Devel::StringInfo, which requires Moose
      (RT#96034)

1.33      2014-04-19 05:58:46Z
    - line numbers in shipped code are now almost the same (within 3) as the
      repository source, for easier debugging
    - Changes content once again included manually, rather than extracted
      directly from git! (there are release tests to ensure that the file is
      kept current.)
    - Improve error message when failing to find a suitable backend (RT#87751)
    - when no backend is available at install time, JSON::PP is used as the
      default prereq rather than JSON.pm (re RT#67967)
    - documentation updated to recommend JSON::MaybeXS instead of JSON.pm for
      new code

1.32   2013-11-07 15:56:33 +0000
    - include dep Test::Requires in dist.ini (wolfsage)

1.31   2013-11-06 21:46:52 +0000
    - test string escapes with JSON::PP (ilmari)
    - support added for JSON::XS version 3 (ilmari)
    - documentation notes added regarding incompatibility issues with
      JSON::XS 3.x and JSON.pm < 2.90
    - tests for more backends
    - fix the tests to properly exclude JSON::XS unless we are explicitly
      testing it

1.30    2013-06-15
    * Add support for Cpanel::JSON::XS and JSON::PP. Fixes RT#85424 & RT#67967. (perigrin)
    * Fix documentation bug RT#86065.

1.29    2011-06-07
	* Artificially bump our version number because an upstream author decided to not play nice. Fixes RT#68690 (perigrin)

1.28	2011-05-09
	* Move podspell into xt/ (perigrin)

1.27    2011-04-08
        * Add auto_install so feature works again, fixes RT#67169 (perigrin)

1.26    2011-03-30
        * Add Deprecation notice (perigrin)

1.25    2010-11-16
        * Fix the test suite to be 5.14 compatible (toddr)

1.24	2010-10-08